# zij

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  environment.yml  index.html  mkdocs.yml  sitemap.xml
canon/: README.md  distributed.md  first-order.md  fractional.md  lr-free.md  privacy-preserving.md  quantum.md  schedulers.md  second-order.md  sharpness-aware.md
distributed/: index.html
docs/: index.md  memory-efficient.md  zeroth-order.md
first-order/: index.html
fractional/: index.html
lr-free/: index.html
pytorch/: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
pytorch/tests/: recipes.py  test_distinctive_paths.py  test_model_based.py  test_optimizers.py  test_registry.py
pytorch/zij/: __init__.py  optim.py  registry.py
pytorch/zij/contrib/: __init__.py
pytorch/zij/contrib/first_order/: __init__.py  a2grad.py  accsgd.py  adabelief.py  adabound.py  adagc.py  adai.py  adam_atan2.py  adamod.py  adamp.py  adan.py  adanorm.py  adapnm.py  adashift.py  adasmooth.py  ademamix.py  adopt.py  aggmo.py  amos.py  avagrad.py  diffgrad.py  exadam.py  fadam.py  focus.py  grams.py  gravity.py  kourkoutas_beta.py  lamb.py  laprop.py  lars.py  lion.py  lookahead.py  madgrad.py  mars.py  novograd.py  padam.py  pid.py  qhoptim.py  ranger.py  ranger21.py  (+6 more)
pytorch/zij/contrib/lr_free/: __init__.py  adamg.py  dadaptation.py  dog.py  mechanic.py  momo.py  prodigy.py  schedulefree.py  schedulefree_wrapper.py  trac.py
pytorch/zij/contrib/memory_efficient/: __init__.py  adam_mini.py  apollo.py  badam.py  came.py  fira.py  galore.py  grokadamw.py  ldadamw.py  lomo.py  sm3.py  spam.py
pytorch/zij/contrib/second_order/: __init__.py  adahessian.py  adamuon.py  normuon.py  polargrad.py  scion.py  shampoo.py  soap.py  sophia.py  splus.py
pytorch/zij/contrib/sharpness_aware/: __init__.py  asam.py  gsam.py  looksam.py  sam.py  wsam.py
pytorch/zij/core/: __init__.py  _adafactor.py  _functional.py  _muon.py  adadelta.py  adagrad.py  adam.py  adamax.py  adamw.py  asgd.py  lbfgs.py  lr_scheduler.py  nadam.py  optimizer.py  radam.py  rmsprop.py  rprop.py  sgd.py  sparse_adam.py  swa_utils.py
pytorch/zij/core/_multi_tensor/: __init__.py  __init__.pyi
quantum/: index.html
(+2170 files in other folders)
